--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#2395ff</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="color_pink">#eb4f38</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFFFF</color>
     <color name="alphawight">#75FFFFFF</color>
